test/expected/explain_a4v.out
explain void a[4]
              ^
15: error: array of "void"; did you mean array of "void*"?
